container for scrollable items added. so it will be rendered correctly on ios 9.x devices

--- a/Timeline/stylesheets/timeline.css
+++ b/Timeline/stylesheets/timeline.css
@@ -5,6 +5,8 @@ body {
 	-o-user-select: none;
 	user-select: none;
 	background-color:black;
+        overflow-x:hidden;
+        overflow-y:hidden;
 }
 h1,h2,h3,h4,div,span {
     font-family:'Arial';
